adding history of last angles

--- a/03_Homework/03c_Fahrmodell_trainieren.ipynb
+++ b/03_Homework/03c_Fahrmodell_trainieren.ipynb
@@ -55,7 +55,6 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from aic.drive.model import LightningDriveModel\n",
     "from aic.logger import DictLogger\n",
     "from aic.runs import create_run_dir\n",
     "from aic.helpers import disable_warnings\n",
@@ -95,7 +94,8 @@
    "outputs": [],
    "source": [
     "def get_image_paths(path: Path) -> list:\n",
-    "    return list(sorted(path.glob('**/*.jpg')))"
+    "    return list(sorted(path.glob('**/*.jpg')))\n",
+    "\n"
    ]
   },
   {
@@ -225,7 +225,9 @@
     "\n",
     "# Dazugehörige Daten für Lenkung und Geschwindigkeit ausgeben\n",
     "angle, speed = read_data_from_json(some_image_path)\n",
-    "print(f\"Geschwindigkeit {speed:.2f}, Lenkung: {angle:.2f}\")"
+    "print(f\"Geschwindigkeit {speed:.2f}, Lenkung: {angle:.2f}\")\n",
+    "\n",
+    "sorted_image_paths = get_image_paths(image_dir_path)"
    ]
   },
   {
@@ -429,10 +431,12 @@
    "source": [
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torchvision.transforms.functional import pil_to_tensor\n",
+    "MEM_SIZE = 12\n",
     "\n",
     "class ImageDataset(Dataset):\n",
-    "    def __init__(self, image_paths, transform=None):\n",
+    "    def __init__(self, image_paths, sorted_image_paths, transform=None):\n",
     "        self.image_paths = image_paths\n",
+    "        self.sorted_image_paths = sorted_image_paths\n",
     "        self.transform = transform\n",
     "\n",
     "    def __len__(self):\n",
@@ -451,7 +455,29 @@
     "        image_tensor = image_tensor / 255.0  # Normalization\n",
     "        angle, _ = read_data_from_json(path)\n",
     "        angle_tensor = torch.tensor(angle, dtype=torch.float32).unsqueeze(0)\n",
-    "        return image_tensor, angle_tensor"
+    "\n",
+    "        last_angles = []\n",
+    "\n",
+    "        data_index = self.sorted_image_paths.index(path)\n",
+    "        start_idx = max(0, data_index - MEM_SIZE)\n",
+    "        current_run = path.name.split('_')[0]\n",
+    "        start_idx_run = self.sorted_image_paths[start_idx].name.split('_')[0]\n",
+    "        if current_run != start_idx_run:\n",
+    "            start_idx = data_index - int(path.stem.split('_')[1])\n",
+    "\n",
+    "        angle_paths = self.sorted_image_paths[start_idx:data_index]\n",
+    "        for angle_path in angle_paths:\n",
+    "            angle_value, _ = read_data_from_json(angle_path)\n",
+    "            last_angles.insert(0, angle_value)\n",
+    "\n",
+    "        if len(last_angles) < MEM_SIZE:\n",
+    "            last_angles += [0.0] * (MEM_SIZE - len(last_angles)) \n",
+    "        else:\n",
+    "            last_angles = last_angles[:MEM_SIZE]\n",
+    "\n",
+    "        angle_history_tensor = torch.tensor(last_angles, dtype=torch.float32)\n",
+    "\n",
+    "        return image_tensor, angle_tensor, angle_history_tensor"
    ]
   },
   {
@@ -470,14 +496,14 @@
     "val_image_paths = image_paths[split_idx:]\n",
     "\n",
     "# Wichtig: Augmentation nur für das Trainingsset aktivieren!\n",
-    "train_dataset = ImageDataset(train_image_paths, transform=transformer)\n",
-    "val_dataset = ImageDataset(val_image_paths, transform=None)\n",
+    "train_dataset = ImageDataset(train_image_paths, sorted_image_paths, transform=transformer)\n",
+    "val_dataset = ImageDataset(val_image_paths, sorted_image_paths, transform=None)\n",
     "\n",
     "# Überprüfen wir mal die Grösse dieser Sets\n",
     "print(len(train_dataset), len(val_dataset))\n",
     "\n",
     "# Inhalt anschauen\n",
-    "image, angle = train_dataset[0]\n",
+    "image, angle, last_angles = train_dataset[0]\n",
     "print(image.shape, image.dtype, angle, angle.dtype)"
    ]
   },
@@ -502,9 +528,10 @@
     ")\n",
     " \n",
     "# Ein Batch aus dem DataLoader laden und dessen Shape anzeigen\n",
-    "images, labels = next(iter(training_loader))\n",
+    "images, labels, last_angles = next(iter(training_loader))\n",
     "print(f\"Input shape: {images.shape}\")\n",
-    "print(f\"Output shape {labels.shape}\")"
+    "print(f\"Output shape {labels.shape}\")\n",
+    "print(f\"Last angles shape: {last_angles.shape}\")"
    ]
   },
   {
@@ -568,7 +595,8 @@
     "        super().__init__()\n",
     "        self.lr = lr\n",
     "\n",
-    "        self.layers = nn.Sequential(\n",
+    "        # Convolutional layers for image processing\n",
+    "        self.conv_layers = nn.Sequential(\n",
     "            OrderedDict(\n",
     "                conv1 = nn.Conv2d(3, 18, 5, stride=2, padding=1),\n",
     "                batch1 = nn.BatchNorm2d(18),\n",
@@ -591,15 +619,34 @@
     "                relu5 = nn.ReLU(),\n",
     "\n",
     "                one2one = nn.Conv2d(64, 1, 1, stride=1),\n",
-    "\n",
     "                flatten = nn.Flatten(1, -1),\n",
-    "                linear1 = nn.Linear(266, 16, bias=True),\n",
-    "                linear2 = nn.Linear(16, 1, bias=True),\n",
     "            )\n",
     "        )\n",
     "\n",
-    "    def forward(self, x):\n",
-    "        return self.layers(x)\n"
+    "        # Calculate the size of flattened conv output\n",
+    "        # For 160x120 input: after conv layers you get 266 features (based on your linear1)\n",
+    "        conv_output_size = 266  # You can calculate this or determine it empirically\n",
+    "        \n",
+    "        # Linear layers that take concatenated features\n",
+    "        self.linear_layers = nn.Sequential(\n",
+    "            nn.Linear(conv_output_size + MEM_SIZE, 16, bias=True),\n",
+    "            nn.ReLU(),\n",
+    "            # nn.Linear(128, 16),\n",
+    "            # nn.ReLU()\n",
+    "            nn.Linear(16, 1, bias=True),\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, image, angle_history):\n",
+    "        # Process image through conv layers\n",
+    "        conv_features = self.conv_layers(image)\n",
+    "        \n",
+    "        # Concatenate conv features with angle history\n",
+    "        combined = torch.cat([conv_features, angle_history], dim=1)\n",
+    "        \n",
+    "        # Pass through linear layers\n",
+    "        output = self.linear_layers(combined)\n",
+    "        \n",
+    "        return output"
    ]
   },
   {
@@ -617,8 +664,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torch\n",
+    "from torch import nn\n",
+    "from pytorch_lightning import LightningModule\n",
+    "\n",
+    "class CustomLightningDriveModel(LightningModule):\n",
+    "    def __init__(self, model):\n",
+    "        super().__init__()\n",
+    "        self.model = model\n",
+    "        self.lr = model.lr\n",
+    "        \n",
+    "    def forward(self, image, angle_history):\n",
+    "        return self.model(image, angle_history)\n",
+    "    \n",
+    "    def training_step(self, batch, batch_idx):\n",
+    "        images, angles, angle_histories = batch\n",
+    "        predictions = self(images, angle_histories)\n",
+    "        loss = nn.functional.mse_loss(predictions, angles)\n",
+    "        self.log('train_loss', loss, prog_bar=True)\n",
+    "        return loss\n",
+    "    \n",
+    "    def validation_step(self, batch, batch_idx):\n",
+    "        images, angles, angle_histories = batch\n",
+    "        predictions = self(images, angle_histories)\n",
+    "        loss = nn.functional.mse_loss(predictions, angles)\n",
+    "        self.log('val_loss', loss, prog_bar=True)\n",
+    "        return loss\n",
+    "    \n",
+    "\n",
+    "    def test_step(self, batch, batch_idx):\n",
+    "        x, y = batch\n",
+    "        y_pred = self(x)\n",
+    "        loss = self.criterion(y_pred, y)\n",
+    "        self.log('test_loss', loss, prog_bar=True)\n",
+    "        return loss\n",
+    "\n",
+    "    def predict_step(self, batch, batch_idx):\n",
+    "        x = batch[0]\n",
+    "        y_pred = self(x)\n",
+    "        return y_pred\n",
+    "\n",
+    "    def configure_optimizers(self):\n",
+    "        return torch.optim.Adam(self.parameters(), lr=self.lr)\n",
+    "\n",
+    "\n",
     "model = DriveModel()\n",
-    "lightning_model = LightningDriveModel(model)\n",
+    "lightning_model = CustomLightningDriveModel(model)\n",
     "\n",
     "logger = DictLogger()"
    ]
@@ -676,7 +767,7 @@
    "outputs": [],
    "source": [
     "# Hyperparameter definieren\n",
-    "EPOCHS = 500\n",
+    "EPOCHS = 50\n",
     "LEARNING_RATE = 0.005\n",
     "\n",
     "lightning_model.lr = LEARNING_RATE\n",
@@ -711,10 +802,7 @@
     "torch.set_float32_matmul_precision('medium')  # Beschleunigt das Training auf Kosten leicht geringerer Präzision\n",
     "\n",
     "# Das Training starten. Dieses dauert eine Weile...\n",
-    "trainer.fit(lightning_model, training_loader, validation_loader\n",
-    "\n",
-    "\n",
-    ")"
+    "trainer.fit(lightning_model, training_loader, validation_loader)"
    ]
   },
   {
@@ -830,15 +918,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict(img_tensor):\n",
+    "def predict(img_tensor, angle_history_tensor):\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
-    "        y_pred = model(img_tensor.unsqueeze(0))\n",
+    "        y_pred = model(img_tensor.unsqueeze(0), angle_history_tensor.unsqueeze(0))\n",
     "    return y_pred.item()\n",
     "\n",
     "# Testen wir unsere Funktion\n",
-    "image_tensor, _ = train_dataset[0]\n",
-    "angle_pred = predict(image_tensor)\n",
+    "image_tensor, angle_tensor, angle_history_tensor = train_dataset[0]\n",
+    "angle_pred = predict(image_tensor, angle_history_tensor)\n",
     "print(f\"Predicted angle: {angle_pred}\")"
    ]
   },
@@ -884,8 +972,8 @@
    "source": [
     "def calculate_error(data: Dataset, save_to: str | Path = None) -> float:\n",
     "    # 📝 Vervollständige die funktion:\n",
-    "    true_y = [angle.item() for _, angle in data]\n",
-    "    pred_y = [predict(img) for img, _ in data]\n",
+    "    true_y = [angle.item() for _, angle, _ in data]\n",
+    "    pred_y = [predict(img, angle_hist) for img, _, angle_hist in data]\n",
     "    errors = [abs(t - p) for t, p in zip(true_y, pred_y)]\n",
     "    mean_error = sum(errors) / len(errors)\n",
     "    #6. den Fehler zurückgibt und ihn als text file in `save_to` speichert.\n",
@@ -906,7 +994,7 @@
    "id": "9e998b79",
    "metadata": {},
    "source": [
-    "Was sagt uns diese Zahl? Wie gross im Durchschnitt der Winkel-Fehler ist. Eigentlich müssen wir aber nur eins wissen: Je geringer, desto besser unser Modell! Der Fehler hilft uns also vor allem verschiedenen Modelle zu vergleichen.\n",
+    "Was sagt uns diese Zahl? Wie gross im Durchschnitt der Winkel-Fehler ist. Eigentlich müssen wir aber auch nur eins wissen: Je geringer, desto besser unser Modell! Der Fehler hilft uns also vor allem verschiedenen Modelle zu vergleichen.\n",
     "\n",
     "Wir können aber auch visuell überprüfen, ob das Modell die Kurven korrekt vorhersagt und bei welchen Werten es Mühe hat. Dazu sortieren wir zuerst das Datenset der Grösse nach. Wenn das Modell gut ist sollten die Linien übereinander liegen."
    ]
@@ -926,11 +1014,11 @@
    "outputs": [],
    "source": [
     "def visualize_angels(data: Dataset):\n",
-    "    true_y = [angle.item() for _, angle in data]\n",
+    "    true_y = [angle.item() for _, angle, _ in data]\n",
     "\n",
     "    n = min(100, len(true_y))\n",
     "    true_y_plot = true_y[:n]\n",
-    "    pred_y_plot = [predict(image_tensor) for image_tensor, _ in val_dataset][:n]\n",
+    "    pred_y_plot = [predict(image_tensor, angle_history) for image_tensor, _, angle_history in val_dataset][:n]\n",
     "    sorted_idx = np.argsort(true_y_plot)\n",
     "    true_y_plot = np.array(true_y_plot)[sorted_idx]\n",
     "    pred_y_plot = np.array(pred_y_plot)[sorted_idx]\n",
@@ -987,19 +1075,21 @@
     "    # Randomly select indices\n",
     "    random_indices = random.sample(range(len(dataset)), n_samples)\n",
     "    \n",
-    "    # 2. Store images and true angles\n",
+    "    # 2. Store images, true angles, and angle history\n",
     "    images = []\n",
     "    true_angles = []\n",
+    "    angle_histories = []\n",
     "    \n",
     "    for idx in random_indices:\n",
-    "        image_tensor, angle_tensor = dataset[idx]\n",
+    "        image_tensor, angle_tensor, angle_history_tensor = dataset[idx]\n",
     "        images.append(image_tensor)\n",
     "        true_angles.append(angle_tensor.item())\n",
+    "        angle_histories.append(angle_history_tensor)\n",
     "    \n",
     "    # 4. Make predictions for each image\n",
     "    predicted_angles = []\n",
-    "    for image_tensor in images:\n",
-    "        pred_angle = predict(image_tensor)\n",
+    "    for image_tensor, angle_history in zip(images, angle_histories):\n",
+    "        pred_angle = predict(image_tensor, angle_history)\n",
     "        predicted_angles.append(pred_angle)\n",
     "    \n",
     "    # 5. Plot the images with True, Pred, and Error values\n",
@@ -1064,12 +1154,15 @@
     "assert not model_path.exists(), 'Das Model existiert bereits'\n",
     "model_path.parent.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "# Model speichern\n",
-    "example_input = train_dataset[0][0].unsqueeze(0)\n",
+    "# Model speichern - mit beiden Inputs (Bild und Angle History)\n",
+    "example_image = train_dataset[0][0].unsqueeze(0)\n",
+    "example_angle_history = train_dataset[0][2].unsqueeze(0)\n",
     "torch.onnx.export(\n",
     "    model.to('cpu'),\n",
-    "    example_input,\n",
+    "    (example_image, example_angle_history),\n",
     "    model_path,\n",
+    "    input_names=['image', 'angle_history'],\n",
+    "    output_names=['steering_angle'],\n",
     ")"
    ]
   },
@@ -1103,7 +1196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
