adding 2nd linear layer

--- a/03_Homework/03c_Fahrmodell_trainieren.ipynb
+++ b/03_Homework/03c_Fahrmodell_trainieren.ipynb
@@ -629,10 +629,10 @@
     "        \n",
     "        # Linear layers that take concatenated features\n",
     "        self.linear_layers = nn.Sequential(\n",
-    "            nn.Linear(conv_output_size + MEM_SIZE, 16, bias=True),\n",
+    "            nn.Linear(conv_output_size + MEM_SIZE, 128, bias=True),\n",
     "            nn.ReLU(),\n",
-    "            # nn.Linear(128, 16),\n",
-    "            # nn.ReLU()\n",
+    "            nn.Linear(128, 16),\n",
+    "            nn.ReLU(),\n",
     "            nn.Linear(16, 1, bias=True),\n",
     "        )\n",
     "\n",
