adding 2 more conv layer

--- a/03_Homework/03c_Fahrmodell_trainieren.ipynb
+++ b/03_Homework/03c_Fahrmodell_trainieren.ipynb
@@ -610,13 +610,22 @@
     "                batch3 = nn.BatchNorm2d(64),\n",
     "                relu3 = nn.ReLU(),\n",
     "\n",
-    "                conv4 = nn.Conv2d(64, 128, 3, stride=1, padding=1),\n",
+    "                conv4 = nn.Conv2d(64, 128, 5, stride=2, padding=1),\n",
     "                batch4 = nn.BatchNorm2d(128),\n",
     "                relu4 = nn.ReLU(),\n",
     "\n",
-    "                conv5 = nn.Conv2d(128, 64, 3, stride=1, padding=1),\n",
-    "                batch5 = nn.BatchNorm2d(64),\n",
+    "                conv5 = nn.Conv2d(128, 265, 5, stride=2, padding=1),\n",
+    "                batch5= nn.BatchNorm2d(265),\n",
     "                relu5 = nn.ReLU(),\n",
+    "\n",
+    "                conv6 = nn.Conv2d(265, 128, 3, stride=1, padding=1),\n",
+    "                batch6= nn.BatchNorm2d(128),\n",
+    "                relu6 = nn.ReLU(),\n",
+    "\n",
+    "\n",
+    "                conv7 = nn.Conv2d(128, 64, 3, stride=1, padding=1),\n",
+    "                batch7 = nn.BatchNorm2d(64),\n",
+    "                relu7 = nn.ReLU(),\n",
     "\n",
     "                one2one = nn.Conv2d(64, 1, 1, stride=1),\n",
     "                flatten = nn.Flatten(1, -1),\n",
@@ -625,7 +634,10 @@
     "\n",
     "        # Calculate the size of flattened conv output\n",
     "        # For 160x120 input: after conv layers you get 266 features (based on your linear1)\n",
-    "        conv_output_size = 266  # You can calculate this or determine it empirically\n",
+    "        # conv_output_size = 266  # You can calculate this or determine it empirically\n",
+    "        with torch.no_grad():\n",
+    "            dummy_input = torch.zeros(1, 3, 120, 160)\n",
+    "            conv_output_size = self.conv_layers(dummy_input).shape[1]\n",
     "        \n",
     "        # Linear layers that take concatenated features\n",
     "        self.linear_layers = nn.Sequential(\n",
