adding model improvment table

--- a/03_Homework/03e_Fahrmodell_optimieren.ipynb
+++ b/03_Homework/03e_Fahrmodell_optimieren.ipynb
@@ -55,14 +55,14 @@
     "\n",
     "Trainiere min. verschiedene 4 Modelle und führe Buch über deine Experimente. Zum Beispiel in einer Tabelle wie dieser:\n",
     "\n",
-    "| Datum    | Experiment Name | Notizen / Änderung | Trainingsdaten (Welche, Anzahl) | Anzahl Epochen | Architektur | Error Validierungs-Set | Fahrtest bestanden? | Error Test-Set (Zusatzaufgabe) |\n",
-    "|----------|----------------|--------------------|--------------------------------|----------------|-------------|-----------------------|---------------------|-------------------------------------|\n",
-    "| 08.11.25 | Fahrmodell_v1  | lr = 0.001         | 10k, Ordner: data/drive-1      | 30             | Standart    | 5.6                   | Ja                  | 7.2                                 |\n",
-    "|          |                |                    |                                |                |             |                       |                     |                                     |\n",
-    "|          |                |                    |                                |                |             |                       |                     |                                     |\n",
-    "|          |                |                    |                                |                |             |                       |                     |                                     |\n",
-    "|          |                |                    |                                |                |             |                       |                     |                                     |\n",
-    "|          |                |                    |                                |                |             |                       |                     |                                     |\n",
+    "| Datum    | Experiment Name | Notizen / Änderung | Trainingsdaten (Welche, Anzahl) | Anzahl Epochen | Architektur                                                  | Error Validierungs-Set | Fahrtest bestanden? | Error Test-Set (Zusatzaufgabe) |\n",
+    "| -------- | --------------- | ------------------ | ------------------------------- | -------------- | ------------------------------------------------------------ | ---------------------- | ------------------- | ------------------------------ |\n",
+    "| 10.11.25 | base-1          | lr=0.005           | 13k; data.zip                   | 50             | Default (5 Conv, 2 linear)                                   | 22.3                   | Ja                  | 2.97                           |\n",
+    "| 10.11.25 | 3-lin           | -                  | 13k; data.zip                   | 30             | 3 linear layers                                              | 24.5                   | Ja                  | 3.28                           |\n",
+    "| 11.11.25 | 7-conv-3l-k3    | -                  | 13k; data.zip                   | 50             | 7 Conv <br>3 Linear<br>Kernel size 5 instead of 3 on layer 5 | 23.8                   | Ja                  | 3.02                           |\n",
+    "| 12.11.25 | base-1-001lr    | lr=0.001           | 13k; data.zip                   | 50             | Default                                                      | 23.4                   | Ja                  | 3.01                           |\n",
+    "| 12.11.25 | base-1-250e     | lr=0.005           | 13k; data.zip                   | 250            | Default                                                      | 24.5                   | Ja                  | 3.43                           |\n",
+    "| 12.11.25 | base-1-infinity | lr=0.005           | 13k; data.zip                   | 50             | Default,<br>kernel size 3, stride 1 on every layer              | 24.7                   | Ja                  | 3.14                           |\n",
     "\n",
     "Präsentiere deine Resultate deinem Betreuer!"
    ]
