--- a/03_Homework/03c_Fahrmodell_trainieren.ipynb
+++ b/03_Homework/03c_Fahrmodell_trainieren.ipynb
@@ -359,7 +359,7 @@
     "\n",
     "    v2.RandomPerspective(distortion_scale=0.2, p=0.5),\n",
     "    # v2.Resize((120, 160)),\n",
-    "    # v2.ElasticTransform(alpha=100),\n",
+    "    v2.ElasticTransform(alpha=100),\n",
     "    v2.RandomInvert(),\n",
     "    v2.RandomPosterize(bits=4, p=0.3),\n",
     "    v2.RandomSolarize(threshold=128, p=0.3),\n",
@@ -451,8 +451,8 @@
     "        # Augmentation (wenn vorhanden)\n",
     "        if self.transform:\n",
     "            image = self.transform(image)\n",
-    "        image_tensor = pil_to_tensor(image)\n",
-    "        image_tensor = image_tensor / 255.0  # Normalization\n",
+    "        image_array = (np.asarray(image) / 255.0).astype(np.float32).transpose(2, 0, 1)\n",
+    "        image_tensor = torch.tensor(image_array)\n",
     "        angle, _ = read_data_from_json(path)\n",
     "        angle_tensor = torch.tensor(angle, dtype=torch.float32).unsqueeze(0)\n",
     "\n",
@@ -515,23 +515,26 @@
    "outputs": [],
    "source": [
     "# Erstellen der DataLoaders\n",
-    "BATCH_SIZE = 128\n",
+    "BATCH_SIZE = 128  # Increased for better GPU utilization\n",
     "training_loader = torch.utils.data.DataLoader(\n",
     "    train_dataset,\n",
     "    batch_size=BATCH_SIZE,\n",
     "    shuffle=True,\n",
-    "    num_workers=8\n",
+    "    num_workers=8,\n",
+    "    pin_memory=True,  # Speeds up CPU->GPU transfer\n",
+    "    persistent_workers=True  # Keeps workers alive between epochs\n",
     ")\n",
     "validation_loader = torch.utils.data.DataLoader(\n",
-    "    val_dataset, batch_size=BATCH_SIZE, shuffle=False, num_workers=4\n",
-    " \n",
+    "    val_dataset, \n",
+    "    batch_size=BATCH_SIZE, \n",
+    "    shuffle=False, \n",
+    "    num_workers=4,\n",
+    "    pin_memory=True,\n",
+    "    persistent_workers=True\n",
     ")\n",
     " \n",
     "# Ein Batch aus dem DataLoader laden und dessen Shape anzeigen\n",
-    "images, labels, last_angles = next(iter(training_loader))\n",
-    "print(f\"Input shape: {images.shape}\")\n",
-    "print(f\"Output shape {labels.shape}\")\n",
-    "print(f\"Last angles shape: {last_angles.shape}\")"
+    "images, labels, last_angles = next(iter(training_loader))"
    ]
   },
   {
@@ -708,7 +711,25 @@
     "        return y_pred\n",
     "\n",
     "    def configure_optimizers(self):\n",
-    "        return torch.optim.Adam(self.parameters(), lr=self.lr)\n",
+    "        optimizer = torch.optim.Adam(self.parameters(), lr=self.lr)\n",
+    "       \n",
+    "        # Learning rate scheduler - reduces LR when validation loss plateaus\n",
+    "        scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(\n",
+    "            optimizer,\n",
+    "            mode='min',\n",
+    "            factor=0.5,\n",
+    "            patience=5,\n",
+    "        )\n",
+    "       \n",
+    "        return {\n",
+    "            'optimizer': optimizer,\n",
+    "            'lr_scheduler': {\n",
+    "                'scheduler': scheduler,\n",
+    "                'monitor': 'val_loss',\n",
+    "                'interval': 'epoch',\n",
+    "                'frequency': 1\n",
+    "            }\n",
+    "        }\n",
     "\n",
     "\n",
     "model = DriveModel()\n",
@@ -770,13 +791,21 @@
    "outputs": [],
    "source": [
     "# Hyperparameter definieren\n",
-    "EPOCHS = 50\n",
+    "EPOCHS = 100\n",
     "LEARNING_RATE = 0.005\n",
     "\n",
     "lightning_model.lr = LEARNING_RATE\n",
     "\n",
-    "# Trainer initialisieren.\n",
-    "trainer = Trainer(max_epochs=EPOCHS, callbacks=[logger])"
+    "# Trainer initialisieren mit GPU-Optimierungen\n",
+    "trainer = Trainer(\n",
+    "    max_epochs=EPOCHS,\n",
+    "    callbacks=[logger],\n",
+    "    precision='16-mixed',  # Mixed precision training for faster computation\n",
+    "    accelerator='auto',  # Automatically use available GPU\n",
+    "    devices=1,  # Use 1 GPU\n",
+    "    accumulate_grad_batches=2,  # Effective batch size = BATCH_SIZE * 2\n",
+    "    benchmark=True  # cuDNN benchmark mode for optimal algorithms\n",
+    ")"
    ]
   },
   {
@@ -802,6 +831,7 @@
     "%%time\n",
     "# Die Zeile oben Zeile sorgt dafür, dass unten angezeigt wird, wie lange es gedauert hat, diese Notebook Zelle auszuführen.\n",
     "\n",
+    "# Enable TensorFloat32 for faster matrix operations on newer GPUs\n",
     "torch.set_float32_matmul_precision('medium')  # Beschleunigt das Training auf Kosten leicht geringerer Präzision\n",
     "\n",
     "# Das Training starten. Dieses dauert eine Weile...\n",
@@ -1199,7 +1229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.8"
   }
  },
  "nbformat": 4,
