saving image of visualised angles

--- a/03_Homework/03c_Fahrmodell_trainieren.ipynb
+++ b/03_Homework/03c_Fahrmodell_trainieren.ipynb
@@ -1061,6 +1061,8 @@
     "    plt.legend()\n",
     "    plt.ylabel(\"Angle\")\n",
     "    plt.title(\"Visuelle Inspektion\")\n",
+    "    if run_directory:\n",
+    "        plt.savefig(Path(run_directory) / 'visualize_angels.png')\n",
     "\n",
     "visualize_angels(val_dataset)"
    ]
