feat: more training data

--- a/03_Homework/03c_Fahrmodell_trainieren.ipynb
+++ b/03_Homework/03c_Fahrmodell_trainieren.ipynb
@@ -431,7 +431,7 @@
    "source": [
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torchvision.transforms.functional import pil_to_tensor\n",
-    "MEM_SIZE = 12\n",
+    "MEM_SIZE = 8\n",
     "\n",
     "class ImageDataset(Dataset):\n",
     "    def __init__(self, image_paths, sorted_image_paths, transform=None):\n",
@@ -800,7 +800,7 @@
     "trainer = Trainer(\n",
     "    max_epochs=EPOCHS,\n",
     "    callbacks=[logger],\n",
-    "    precision='16-mixed',  # Mixed precision training for faster computation\n",
+    "    precision='64-true',  # Mixed precision training for faster computation\n",
     "    accelerator='auto',  # Automatically use available GPU\n",
     "    devices=1,  # Use 1 GPU\n",
     "    accumulate_grad_batches=2,  # Effective batch size = BATCH_SIZE * 2\n",
@@ -832,7 +832,7 @@
     "# Die Zeile oben Zeile sorgt dafür, dass unten angezeigt wird, wie lange es gedauert hat, diese Notebook Zelle auszuführen.\n",
     "\n",
     "# Enable TensorFloat32 for faster matrix operations on newer GPUs\n",
-    "torch.set_float32_matmul_precision('medium')  # Beschleunigt das Training auf Kosten leicht geringerer Präzision\n",
+    "torch.set_float32_matmul_precision('highest')  # Beschleunigt das Training auf Kosten leicht geringerer Präzision\n",
     "\n",
     "# Das Training starten. Dieses dauert eine Weile...\n",
     "trainer.fit(lightning_model, training_loader, validation_loader)"
