fixing plot when saving form python file

--- a/03_Homework/03c_Fahrmodell_trainieren.ipynb
+++ b/03_Homework/03c_Fahrmodell_trainieren.ipynb
@@ -1055,7 +1055,7 @@
     "    sorted_idx = np.argsort(true_y_plot)\n",
     "    true_y_plot = np.array(true_y_plot)[sorted_idx]\n",
     "    pred_y_plot = np.array(pred_y_plot)[sorted_idx]\n",
-    "\n",
+    "    plt.figure(figsize=(10, 6))\n",
     "    plt.plot(true_y_plot, label=\"True\")\n",
     "    plt.plot(pred_y_plot, label=\"Predicted\")\n",
     "    plt.legend()\n",
