--- a/03_Homework/03c_Fahrmodell_trainieren.ipynb
+++ b/03_Homework/03c_Fahrmodell_trainieren.ipynb
@@ -796,8 +796,16 @@
     "\n",
     "lightning_model.lr = LEARNING_RATE\n",
     "\n",
-    "# Trainer initialisieren.\n",
-    "trainer = Trainer(max_epochs=EPOCHS, callbacks=[logger])"
+    "# Trainer initialisieren mit GPU-Optimierungen\n",
+    "trainer = Trainer(\n",
+    "    max_epochs=EPOCHS,\n",
+    "    callbacks=[logger],\n",
+    "    precision='64-true',  # Mixed precision training for faster computation\n",
+    "    accelerator='auto',  # Automatically use available GPU\n",
+    "    devices=1,  # Use 1 GPU\n",
+    "    accumulate_grad_batches=2,  # Effective batch size = BATCH_SIZE * 2\n",
+    "    benchmark=True  # cuDNN benchmark mode for optimal algorithms\n",
+    ")"
    ]
   },
   {
@@ -823,7 +831,8 @@
     "%%time\n",
     "# Die Zeile oben Zeile sorgt dafür, dass unten angezeigt wird, wie lange es gedauert hat, diese Notebook Zelle auszuführen.\n",
     "\n",
-    "torch.set_float32_matmul_precision('medium')  # Beschleunigt das Training auf Kosten leicht geringerer Präzision\n",
+    "# Enable TensorFloat32 for faster matrix operations on newer GPUs\n",
+    "torch.set_float32_matmul_precision('highest')  # Beschleunigt das Training auf Kosten leicht geringerer Präzision\n",
     "\n",
     "# Das Training starten. Dieses dauert eine Weile...\n",
     "trainer.fit(lightning_model, training_loader, validation_loader)"
@@ -1046,14 +1055,15 @@
     "    sorted_idx = np.argsort(true_y_plot)\n",
     "    true_y_plot = np.array(true_y_plot)[sorted_idx]\n",
     "    pred_y_plot = np.array(pred_y_plot)[sorted_idx]\n",
-    "\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    \n",
     "    plt.plot(true_y_plot, label=\"True\")\n",
     "    plt.plot(pred_y_plot, label=\"Predicted\")\n",
     "    plt.legend()\n",
     "    plt.ylabel(\"Angle\")\n",
     "    plt.title(\"Visuelle Inspektion\")\n",
     "    if run_directory:\n",
-    "        plt.savefig(Path(run_directory) / 'visualize_angels.png')\n",
+    "        plt.savefig(Path(run_directory)/'visualize_angels.png')\n",
     "\n",
     "visualize_angels(val_dataset)"
    ]
